--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "now-start": "node server/index.js",
+    "deploy": "now --public"
   },
+  "alias": "rasbandit-pokemon-catcher",
   "proxy": "http://localhost:3030"
 }
